--- a/.pmtignore
+++ b/.pmtignore
@@ -36,7 +36,6 @@ junit/
 pkg/
 coverage/
 .yardoc/
-REFERENCE.md
 
 ## InteliJ / RubyMine
 .idea
@@ -44,3 +43,9 @@ REFERENCE.md
 ## Beaker
 .vagrant/
 log/
+
+# Files we don't want to ship in a release
+CONTRIBUTING.md
+Gemfile
+Rakefile
+spec/
